--- a/front/index.html
+++ b/front/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
+    <div class="container text-center">
+      <h1 class="text-muted mt-5 mb-5">Liste des clients</h1>
       <ul id="test" class="list-group list-group-flush">
       </ul>
-      <button id="reload" class="btn btn-success mt-5">Recharger la liste</button>
+      <button id="reload" class="btn btn-success mt-5">Actualiser la liste</button>
+      <a href="http://127.0.0.1:3012/liste" target="_blank" class="btn btn-primary mt-5">Voir la liste</a>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
